changed bin path

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.1",
     "description": "Penthouse cli tool",
     "bin": {
-        "penthouse-cli": "./bin/penthouse-cli"
+        "penthouse": "./bin/penthouse-cli"
     },
     "main": "index",
     "keywords": [
