Added readmefile + working binary

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "penthouse-cli",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "Penthouse cli tool",
     "bin": {
-        "penthouse": "./bin/penthouse-cli"
+        "penthouse-cli": "./bin/penthouse-cli"
     },
     "main": "index",
     "keywords": [
